# rusty-compass

./: .dockerignore  .gitignore  .lucille-version  .markdownlint.json  README.md  docker-compose.yml
langchain_agent/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  agent_state.py  benchmark_search.py  catalog_generator.py  checkpoint_maintenance.py  checkpoint_optimizer.py  cloudbuild.yaml  component_specs.py  config.py  config_builder.py  content_generators.py  doc_replacer.py  doc_writer.py  embedding_cache.py  exceptions.py  ingest_lucille_docs.py  init_db.py  link_verifier.py  logging_config.py  lucille_validator.py  main.py  migrate_to_hnsw.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reranker.py  retry_utils.py  test_clarification.py  test_clarification_unit.py  vector_store.py  verify_changes.py
langchain_agent/api/: __init__.py  main.py
langchain_agent/api/middleware/: __init__.py  auth.py  origin_auth.py
langchain_agent/api/routes/: chat.py  conversations.py  health.py
langchain_agent/api/schemas/: __init__.py  events.py
langchain_agent/api/services/: observable_agent.py
langchain_agent/data/: component_catalog.json
langchain_agent/scripts/: deploy.sh  extract_specs.py  gcp-init.sh  gcp-teardown.sh  logs.sh  setup.sh  start.sh  stop.sh  teardown.sh
langchain_agent/tests/: README.md  conftest.py  load_test_phase3.js
langchain_agent/web/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+63 files in other folders)
