[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rusty-compass-agent"
version = "1.0.0"
description = "Lucille Documentation RAG Agent with Config Builder and Intent Classification"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.5,<2.0.0",
    "langchain-google-genai>=4.0.0,<5.0.0",
    "langgraph>=1.0.5,<2.0.0",
    "langgraph-checkpoint-postgres>=3.0.2,<4.0.0",
    "psycopg[binary]>=3.3.0",
    "psycopg-pool>=3.3.0",
    "opensearch-py>=2.4.0",
    "sqlalchemy>=2.0.0",
    "gitpython>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.0.0",
    "beautifulsoup4>=4.12.3",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
]

[tool.setuptools]
packages = ["langchain_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
